@@ -1,280 +1,70 @@
 package club.xiaojiawei.hsscript.controller.javafx;
 
+import ch.qos.logback.classic.Level;
+import ch.qos.logback.classic.spi.ILoggingEvent;
 import club.xiaojiawei.DeckStrategy;
-import club.xiaojiawei.hsscript.bean.Release;
-import club.xiaojiawei.hsscript.bean.single.repository.GiteeRepository;
-import club.xiaojiawei.hsscript.bean.single.repository.GithubRepository;
-import club.xiaojiawei.config.ThreadPoolConfigKt;
-import club.xiaojiawei.controls.NotificationManager;
+import club.xiaojiawei.controls.CopyLabel;
 import club.xiaojiawei.controls.Time;
-import club.xiaojiawei.controls.ico.*;
-import club.xiaojiawei.hsscript.consts.ScriptStaticData;
+import club.xiaojiawei.controls.ico.AbstractIco;
+import club.xiaojiawei.controls.ico.ClearIco;
+import club.xiaojiawei.controls.ico.CopyIco;
+import club.xiaojiawei.controls.ico.OKIco;
 import club.xiaojiawei.enums.RunModeEnum;
+import club.xiaojiawei.hsscript.appender.ExtraLogAppender;
+import club.xiaojiawei.hsscript.bean.Release;
+import club.xiaojiawei.hsscript.bean.WorkDay;
+import club.xiaojiawei.hsscript.bean.WorkTime;
+import club.xiaojiawei.hsscript.bean.single.WarEx;
+import club.xiaojiawei.hsscript.controller.javafx.view.MainView;
+import club.xiaojiawei.hsscript.enums.ConfigEnum;
 import club.xiaojiawei.hsscript.enums.WindowEnum;
 import club.xiaojiawei.hsscript.listener.VersionListener;
 import club.xiaojiawei.hsscript.status.DeckStrategyManager;
-import club.xiaojiawei.hsscript.status.Work;
-import club.xiaojiawei.utils.PropertiesUtil;
+import club.xiaojiawei.hsscript.status.PauseStatus;
+import club.xiaojiawei.hsscript.utils.ConfigExUtil;
+import club.xiaojiawei.hsscript.utils.ConfigUtil;
+import club.xiaojiawei.hsscript.utils.SystemUtil;
 import club.xiaojiawei.hsscript.utils.WindowUtil;
-import jakarta.annotation.Resource;
+import javafx.animation.PauseTransition;
 import javafx.animation.RotateTransition;
 import javafx.animation.Timeline;
 import javafx.application.Platform;
-import javafx.beans.property.BooleanProperty;
-import javafx.beans.property.SimpleBooleanProperty;
+import javafx.beans.property.SimpleDoubleProperty;
 import javafx.collections.ObservableList;
 import javafx.collections.SetChangeListener;
 import javafx.fxml.FXML;
-import javafx.fxml.Initializable;
 import javafx.scene.Node;
-import javafx.scene.control.*;
+import javafx.scene.control.CheckBox;
+import javafx.scene.control.Label;
 import javafx.scene.input.MouseButton;
 import javafx.scene.input.MouseEvent;
+import javafx.scene.layout.AnchorPane;
 import javafx.scene.layout.HBox;
-import javafx.scene.layout.StackPane;
-import javafx.scene.layout.TilePane;
 import javafx.scene.layout.VBox;
-import javafx.scene.text.Text;
 import javafx.stage.Popup;
 import javafx.stage.Stage;
 import javafx.util.Duration;
 import javafx.util.StringConverter;
-import lombok.Getter;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Component;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import java.io.*;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.StandardCopyOption;
 import java.util.*;
-import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.Consumer;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipInputStream;
-
-import static club.xiaojiawei.hsscript.consts.ScriptStaticData.TEMP_VERSION_PATH;
-import static club.xiaojiawei.enums.ConfigurationEnum.DEFAULT_DECK_STRATEGY;
+import java.util.stream.Collectors;
 
 /**
  * @author 肖嘉威
  * @date 2023/2/21 12:33
  */
-@Component
-@Slf4j
-public class MainController implements Initializable {
+public class MainController extends MainView {
 
-    @FXML
-    private StartIco startIco;
-    @FXML
-    private PauseIco pauseIco;
-    @FXML
-    private ToggleGroup pauseToggleGroup;
-    @FXML
-    private StackPane rootPane;
-    @FXML
-    @Getter
-    private NotificationManager<Object> notificationManger;
-    @FXML
-    private ScrollPane logScrollPane;
-    @FXML
-    private Button updateBtn;
-    @FXML
-    private Button flushBtn;
-    @FXML
-    private FlushIco flushIco;
-    @FXML
-    private Text versionText;
-    @FXML
-    private VBox logVBox;
-    @FXML
-    private Accordion accordion;
-    @FXML
-    private ToggleButton startButton;
-    @FXML
-    private ToggleButton pauseButton;
-    @FXML
-    private TitledPane titledPaneLog;
-    @FXML
-    @Getter
-    private Text gameCount;
-    @FXML
-    @Getter
-    private Text winningPercentage;
-    @FXML
-    @Getter
-    private Text gameTime;
-    @FXML
-    @Getter
-    private Text exp;
-    @FXML
-    private ComboBox<RunModeEnum> runModeBox;
-    @FXML
-    private ComboBox<DeckStrategy> deckBox;
-    @FXML
-    private TilePane workDay;
-    @FXML
-    private VBox workTime;
-    @FXML
-    private ProgressBar downloadProgress;
-    @Resource
-    private AtomicReference<BooleanProperty> isPause;
-    @Resource
-    private PropertiesUtil propertiesUtil;
-    @Resource
-    private Properties scriptConfiguration;
-    @Resource
-    private VersionListener versionListener;
-    @Getter
-    private static VBox staticLogVBox;
-    @Getter
-    private static Accordion staticAccordion;
-    @Getter
-    private static NotificationManager<Object> staticNotificationManger;
-    private static ProgressBar staticDownloadProgress;
-    private static AtomicReference<BooleanProperty> staticIsPause;
-    private static final SimpleBooleanProperty UPDATING = new SimpleBooleanProperty(false);
-    private static final String VERSION_FILE_FLAG_NAME = "downloaded.flag";
+    //调试日志
+    private final static Logger log = LoggerFactory.getLogger(MainController.class);
+
+
     private boolean isNotHoverLog = true;
-    @FXML
-    private TitledPane titledPaneControl;
 
-    public void expandedLogPane() {
-        accordion.setExpandedPane(titledPaneLog);
-    }
-
-    public static void downloadRelease(Release release, boolean force, Consumer<String> callback) {
-        if (UPDATING.get()) {
-            return;
-        }
-        UPDATING.set(true);
-        ThreadPoolConfigKt.getEXTRA_THREAD_POOL().submit(() -> {
-            String path = null;
-            try {
-                File file = Path.of(TEMP_VERSION_PATH, release.getTagName(), VERSION_FILE_FLAG_NAME).toFile();
-                if (!force && file.exists()) {
-                    path = file.getParentFile().getAbsolutePath();
-                } else if ((path = downloadRelease(release, GiteeRepository.getInstance().getReleaseURL(release))) == null) {
-                    Platform.runLater(() -> staticNotificationManger.showInfo("更换下载源重新下载", 3));
-                    path = downloadRelease(release, GithubRepository.getInstance().getReleaseURL(release));
-                }
-            } finally {
-                UPDATING.set(false);
-                if (callback != null) {
-                    callback.accept(path);
-                }
-            }
-        });
-    }
-
-    private static String downloadRelease(Release release, String url) {
-        Path rootPath;
-        try (
-                InputStream inputStream = new URI(url)
-                        .toURL()
-                        .openConnection()
-                        .getInputStream();
-                ZipInputStream zipInputStream = new ZipInputStream(inputStream);
-        ) {
-            String startContent = "开始下载<" + release.getTagName() + ">";
-            log.info(startContent);
-            Platform.runLater(() -> staticNotificationManger.showInfo(startContent, 2));
-            staticDownloadProgress.setProgress(0D);
-            staticDownloadProgress.setVisible(true);
-            staticDownloadProgress.setManaged(true);
-            ZipEntry nextEntry;
-            double index = 0D, count = 74D;
-            rootPath = Path.of(TEMP_VERSION_PATH, release.getTagName());
-            File rootFile = rootPath.toFile();
-            if (!rootFile.exists() && !rootFile.mkdirs()) {
-                log.error(rootFile.getAbsolutePath() + "创建失败");
-                return null;
-            }
-            while ((nextEntry = zipInputStream.getNextEntry()) != null) {
-                File entryFile = rootPath.resolve(nextEntry.getName()).toFile();
-                if (nextEntry.isDirectory()) {
-                    if (entryFile.mkdirs()) {
-                        log.info("created_dir：" + entryFile.getPath());
-                    }
-                } else {
-                    File parentFile = entryFile.getParentFile();
-                    if (parentFile.exists() || parentFile.mkdirs()) {
-                        try (BufferedOutputStream bufferedOutputStream = new BufferedOutputStream(new FileOutputStream(entryFile))) {
-                            int l;
-                            byte[] bytes = new byte[8192];
-                            while ((l = zipInputStream.read(bytes)) != -1) {
-                                bufferedOutputStream.write(bytes, 0, l);
-                            }
-                        }
-                        log.info("downloaded_file：" + entryFile.getPath());
-                    }
-                }
-                staticDownloadProgress.setProgress(++index / count);
-            }
-            writeVersionFileCompleteFlag(rootPath.toString());
-            staticDownloadProgress.setProgress(1D);
-            String endContent = "<" + release.getTagName() + ">下载完毕";
-            log.info(endContent);
-            Platform.runLater(() -> staticNotificationManger.showSuccess(endContent, 2));
-        } catch (IOException | URISyntaxException e) {
-            String errorContent = "<" + release.getTagName() + ">下载失败";
-            log.error(errorContent + "," + url, e);
-            Platform.runLater(() -> staticNotificationManger.showError(errorContent, 2));
-            return null;
-        } finally {
-            staticDownloadProgress.setVisible(false);
-            staticDownloadProgress.setManaged(false);
-        }
-        return rootPath.toString();
-    }
-
-    private static boolean writeVersionFileCompleteFlag(String path) {
-        try {
-            return Path.of(path, VERSION_FILE_FLAG_NAME).toFile().createNewFile();
-        } catch (IOException e) {
-            log.error("", e);
-        }
-        return false;
-    }
-
-    public static void execUpdate(String versionPath) {
-        try {
-            UPDATING.set(true);
-            String rootPath = System.getProperty("user.dir");
-            String updateProgramPath = rootPath + File.separator + ScriptStaticData.UPDATE_PROGRAM_NAME;
-            Files.copy(
-                    Path.of(versionPath + File.separator + ScriptStaticData.UPDATE_PROGRAM_NAME),
-                    Path.of(rootPath + File.separator + ScriptStaticData.UPDATE_PROGRAM_NAME),
-                    StandardCopyOption.REPLACE_EXISTING
-            );
-            Runtime.getRuntime().exec(String.format(
-                    "%s --target='%s' --source='%s' --pause='%s' --pid='%s'",
-                    updateProgramPath,
-                    rootPath,
-                    versionPath,
-                    staticIsPause.get().get(),
-                    ProcessHandle.current().pid()
-            ));
-        } catch (IOException e) {
-            log.error("执行版本更新失败", e);
-        } finally {
-            UPDATING.set(false);
-        }
-    }
-
-    private void assign() {
-        staticLogVBox = logVBox;
-        staticAccordion = accordion;
-        staticDownloadProgress = downloadProgress;
-        staticIsPause = isPause;
-        staticNotificationManger = notificationManger;
-    }
-
-    private Map<RunModeEnum, List<DeckStrategy>> runModeMap = new HashMap<>();
+    private final Map<RunModeEnum, List<DeckStrategy>> runModeMap = new HashMap<>();
 
     /**
      * 初始化模式和卡组
@@ -308,16 +98,16 @@ public class MainController implements Initializable {
 //        模式更改监听
         runModeBox.getSelectionModel().selectedItemProperty().addListener((observable, oldValue, newValue) -> {
             deckBox.getSelectionModel().select(null);
-            if (newValue == null){
+            if (newValue == null) {
                 deckBox.getItems().clear();
-            }else {
+            } else {
                 deckBox.getItems().setAll(runModeMap.get(newValue));
             }
         });
 
 //        卡组更改监听
         deckBox.getSelectionModel().selectedItemProperty().addListener((observable, oldValue, newValue) -> {
-            if (newValue != null){
+            if (newValue != null) {
 //                将卡组策略的第一个运行模式改为当前运行模式
                 for (int i = 0; i < newValue.getRunModes().length; i++) {
                     RunModeEnum runModeEnum = newValue.getRunModes()[i];
@@ -328,17 +118,20 @@ public class MainController implements Initializable {
                     }
                 }
             }
-            DeckStrategyManager.CURRENT_DECK_STRATEGY.set(newValue);
+            DeckStrategyManager.INSTANCE.setCurrentDeckStrategy(newValue);
         });
 
-        Optional<DeckStrategy> defaultDeck = DeckStrategyManager.DECK_STRATEGIES.stream().filter(deckStrategy -> Objects.equals(scriptConfiguration.getProperty(DEFAULT_DECK_STRATEGY.getKey()), deckStrategy.id())).findFirst();
+        Optional<DeckStrategy> defaultDeck = DeckStrategyManager.INSTANCE.getDeckStrategies()
+                .stream()
+                .filter(deckStrategy -> Objects.equals(ConfigUtil.INSTANCE.getString(ConfigEnum.DEFAULT_DECK_STRATEGY), deckStrategy.id()))
+                .findFirst();
         if (defaultDeck.isPresent()) {
             defaultDeck.get().getRunModes();
             runModeBox.setValue(defaultDeck.get().getRunModes()[0]);
             deckBox.setValue(defaultDeck.get());
         }
 
-        DeckStrategyManager.CURRENT_DECK_STRATEGY.addListener((observableValue, deck, t1) -> {
+        DeckStrategyManager.INSTANCE.getCurrentDeckStrategyProperty().addListener((observableValue, deck, t1) -> {
             if (t1 != null) {
                 t1.getRunModes();
                 runModeBox.setValue(t1.getRunModes()[0]);
@@ -349,7 +142,7 @@ public class MainController implements Initializable {
 
     public void reloadRunMode() {
         runModeMap.clear();
-        for (DeckStrategy deckStrategy : DeckStrategyManager.DECK_STRATEGIES) {
+        for (DeckStrategy deckStrategy : DeckStrategyManager.INSTANCE.getDeckStrategies()) {
             for (RunModeEnum runModeEnum : deckStrategy.getRunModes()) {
                 List<DeckStrategy> strategies = runModeMap.getOrDefault(runModeEnum, new ArrayList<>());
                 strategies.add(deckStrategy);
@@ -359,24 +152,156 @@ public class MainController implements Initializable {
         runModeBox.getItems().setAll(runModeMap.keySet());
     }
 
+    private static String formatTime(int time) {
+        String timeStr;
+        if (time == 0){
+            timeStr = String.format("%d", time);
+        } else if (time < 60){
+            timeStr = String.format("%dm", time);
+        }else if (time < 1440){
+            if (time % 60 == 0){
+                timeStr = String.format("%dh", time / 60);
+            }else {
+                timeStr = String.format("%dh%dm", time / 60, time % 60);
+            }
+        }else {
+            if (time % 1440 == 0){
+                timeStr = String.format("%dd", time / 1440);
+            }else {
+                timeStr = String.format("%dd%dh", time / 1440, time % 1440 / 60);
+            }
+        }
+        return timeStr;
+    }
+
+    @SuppressWarnings("all")
+    private void appendLog(ILoggingEvent event){
+        Platform.runLater(() -> {
+            ObservableList<Node> list = logVBox.getChildren();
+            //                大于二百五条就清空,防止内存泄露和性能问题
+            if (list.size() > 250){
+                list.clear();
+            }
+            CopyLabel label = new CopyLabel();
+            label.setNotificationManager(notificationManger);
+            label.setStyle("-fx-wrap-text: true");
+            label.prefWidthProperty().bind(accordion.widthProperty().subtract(15));
+
+            int levelInt = event.getLevel().levelInt;
+            String message = event.getMessage();
+//                处理需要复制的文本
+            if (message != null && message.startsWith("$")) {
+                message = message.substring(1);
+                label.setText(message);
+                label.getStyleClass().add("copyLog");
+                AnchorPane anchorPane = wrapLabel(label);
+                list.add(anchorPane);
+                return;
+            }
+            /*为日志上颜色*/
+            if (event.getThrowableProxy() == null && levelInt <= Level.INFO_INT){
+                label.setText(message);
+            }else if (levelInt <= Level.WARN_INT){
+                label.setText(message);
+                label.getStyleClass().add("warnLog");
+            }else {
+                label.setText(message + "，查看脚本日志获取详细错误信息");
+                label.getStyleClass().add("errorLog");
+            }
+            list.add(label);
+        });
+    }
+
+    private AnchorPane wrapLabel(Label label){
+        AnchorPane anchorPane = new AnchorPane();
+        anchorPane.getStyleClass().add("hoverRootNode");
+        Node node = buildCopyNode(() -> SystemUtil.INSTANCE.copyToClipboard(label.getText()));
+        node.getStyleClass().add("hoverChildrenNode");
+        anchorPane.getChildren().add(label);
+        anchorPane.getChildren().add(node);
+        AnchorPane.setRightAnchor(node, 5D);
+        AnchorPane.setTopAnchor(node, 5D);
+        return anchorPane;
+    }
+
+    private Node buildCopyNode(Runnable clickHandler){
+        Label graphicLabel = new Label();
+        CopyIco copyIco = new CopyIco();
+        String icoColor = "#e4e4e4";
+        copyIco.setColor(icoColor);
+        graphicLabel.setGraphic(copyIco);
+        graphicLabel.setStyle("""
+                            -fx-cursor: hand;
+                            -fx-alignment: CENTER;
+                            -fx-pref-width: 22;
+                            -fx-pref-height: 22;
+                            -fx-background-radius: 3;
+                            -fx-background-color: rgba(128,128,128,0.9);
+                            -fx-font-size: 10;
+                            """);
+        graphicLabel.setOnMouseClicked(actionEvent -> {
+            if (clickHandler != null){
+                clickHandler.run();
+            }
+            OKIco okIco = new OKIco();
+            okIco.setColor(icoColor);
+            graphicLabel.setGraphic(okIco);
+            PauseTransition pauseTransition = new PauseTransition(Duration.millis(1000));
+            pauseTransition.setOnFinished(actionEvent1 -> {
+                graphicLabel.setGraphic(copyIco);
+            });
+            pauseTransition.play();
+        });
+        return graphicLabel;
+    }
+
 
     private void addListener() {
-        DeckStrategyManager.DECK_STRATEGIES.addListener((SetChangeListener<? super DeckStrategy>) observable -> {
+//        日志监听
+        ExtraLogAppender.addCallback(this::appendLog);
+
+        /**
+         * 暂停状态监听
+         */
+        PauseStatus.INSTANCE.addListener((observableValue, aBoolean, t1) -> {
+            changeSwitch(t1);
+        });
+
+        WarEx warInstance = WarEx.INSTANCE;
+        /**
+         * 游戏局数监听
+         */
+        warInstance.getWarCountProperty().addListener((observableValue, number, t1) -> {
+            log.info("已完成第 " + t1 + " 把游戏");
+            gameCount.setText(String.valueOf(warInstance.getWarCount()));
+            winningPercentage.setText(
+                    (String.format(
+                            "%.0f",
+                            warInstance.getWinCount() / warInstance.getWarCount() * 100D
+                    ) + "%"));
+            gameTime.setText(formatTime(warInstance.getHangingTime()));
+            exp.setText(String.valueOf(warInstance.getHangingEXP()));
+        });
+        DeckStrategyManager.INSTANCE.getDeckStrategies().addListener((SetChangeListener<? super DeckStrategy>) observable -> {
             reloadRunMode();
         });
-        //        是否在更新中监听
-        UPDATING.addListener((observable, oldValue, newValue) -> updateBtn.setDisable(newValue));
+        //        是否在下载中监听
+        VersionListener.INSTANCE.downloadingReadOnlyProperty().addListener((observable, oldValue, newValue) -> {
+            Platform.runLater(() -> updateBtn.setDisable(newValue));
+        });
         //        监听日志自动滑到底部
         logVBox.heightProperty().addListener((observable, oldValue, newValue) -> {
             if (isNotHoverLog) {
                 logScrollPane.setVvalue(logScrollPane.getVmax());
             }
         });
-        VersionListener.canUpdateReadOnlyProperty().addListener((observable, oldValue, newValue) -> {
-            flushBtn.setVisible(!newValue);
-            flushBtn.setManaged(!newValue);
-            updateBtn.setVisible(newValue);
-            updateBtn.setManaged(newValue);
+        VersionListener.INSTANCE.canUpdateReadOnlyProperty().addListener((observable, oldValue, newValue) -> {
+            Platform.runLater(() -> {
+                flushBtn.setVisible(!newValue);
+                flushBtn.setManaged(!newValue);
+                updateBtn.setVisible(newValue);
+                updateBtn.setManaged(newValue);
+            });
         });
         String btnPressedStyleClass = "btnPressed";
         pauseToggleGroup.selectedToggleProperty().addListener((observableValue, toggle, t1) -> {
@@ -391,14 +316,14 @@ public class MainController implements Initializable {
                     startIco.setColor("gray");
                     pauseIco.setColor("black");
                     startButton.getStyleClass().add(btnPressedStyleClass);
-                    isPause.get().set(false);
+                    PauseStatus.INSTANCE.asyncSetPause(false);
                 } else if (t1 == pauseButton) {
                     pauseIco.setColor("gray");
                     startIco.setColor("black");
                     pauseButton.getStyleClass().add(btnPressedStyleClass);
                     AbstractIco graphic = (AbstractIco) pauseButton.getGraphic();
                     graphic.setColor("gray");
-                    isPause.get().set(true);
+                    PauseStatus.INSTANCE.asyncSetPause(true);
                 }
             }
         });
@@ -431,43 +356,41 @@ public class MainController implements Initializable {
      */
     public void initWorkDate() {
 //        初始化挂机天
-        String[] workDayFlagArr = Work.getWorkDayFlagArr();
+        Map<String, Boolean> workDayMap = ConfigExUtil.INSTANCE.getWorkDay().stream().collect(Collectors.toMap(WorkDay::getDay, WorkDay::getEnabled));;
         ObservableList<Node> workDayChildren = workDay.getChildren();
-        for (int i = 0; i < workDayFlagArr.length; i++) {
-            ((CheckBox) workDayChildren.get(i)).setSelected(Objects.equals(workDayFlagArr[i], "true"));
+        for (Node workDayChild : workDayChildren) {
+            if (workDayChild instanceof CheckBox checkBox) {
+                Boolean enable = workDayMap.get(workDayChild.getUserData().toString());
+                checkBox.setSelected(enable != null && enable);
+            }
         }
 //        初始化挂机段
-        String[] workTimeFlagArr = Work.getWorkTimeFlagArr();
-        String[] workTimeArr = Work.getWorkTimeArr();
+        List<WorkTime> workTimes = ConfigExUtil.INSTANCE.getWorkTime();
+        int length = Math.min(workTimes.size(), workDayChildren.size());
         ObservableList<Node> workTimeChildren = workTime.getChildren();
-        for (int i = 0; i < workTimeFlagArr.length; i++) {
+        for (int i = 0; i < length; i++) {
             HBox timeHBox = (HBox) workTimeChildren.get(i);
             ObservableList<Node> timeControls = ((HBox) timeHBox.getChildren().get(1)).getChildren();
-            if (workTimeArr[i] != null && !Objects.equals(workTimeArr[i], "null") && !workTimeArr[i].isBlank()) {
-                String[] times = workTimeArr[i].split("-");
-                ((Time) timeControls.get(0)).setTime(times[0]);
-                ((Time) timeControls.get(2)).setTime(times[1]);
-                ((CheckBox) timeHBox.getChildren().get(0)).setSelected(Objects.equals(workTimeFlagArr[i], "true"));
-            } else {
-                ((Time) timeControls.get(0)).setTime(null);
-                ((Time) timeControls.get(2)).setTime(null);
-                ((CheckBox) timeHBox.getChildren().get(0)).setSelected(false);
-            }
+            WorkTime time = workTimes.get(i);
+            ((Time) timeControls.get(0)).setTime(time.getStartTime());
+            ((Time) timeControls.get(2)).setTime(time.getEndTime());
+            ((CheckBox) timeHBox.getChildren().getFirst()).setSelected(time.getEnabled());
         }
     }
 
-    public void changeSwitch(boolean isPause) {
+    private void changeSwitch(boolean isPause) {
         if (isPause) {
             pauseToggleGroup.selectToggle(pauseButton);
+            accordion.setExpandedPane(titledPaneControl);
         } else {
             pauseToggleGroup.selectToggle(startButton);
+            accordion.setExpandedPane(titledPaneLog);
         }
     }
 
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
-        versionText.setText("当前版本：" + VersionListener.getCurrentRelease().getTagName());
-        assign();
+        versionText.setText("当前版本：" + VersionListener.INSTANCE.getCurrentRelease().getTagName());
         initModeAndDeck();
         initWorkDate();
         addListener();
@@ -481,8 +404,8 @@ public class MainController implements Initializable {
         transition.setCycleCount(Timeline.INDEFINITE);
         try {
             transition.play();
-            versionListener.checkVersion();
-            if (VersionListener.isCanUpdate()) {
+            VersionListener.INSTANCE.checkVersion();
+            if (VersionListener.INSTANCE.getCanUpdate()) {
                 notificationManger.showSuccess("发现新版本", 2);
             } else {
                 notificationManger.showInfo("已是最新版本", 2);
@@ -494,22 +417,35 @@ public class MainController implements Initializable {
 
     @FXML
     protected void openSettings() {
-        Stage stage = WindowUtil.buildStage(WindowEnum.SETTINGS);
-        if (stage.getOwner() == null){
-            stage.initOwner(WindowUtil.getStage(WindowEnum.MAIN));
+        Stage stage = WindowUtil.INSTANCE.buildStage(WindowEnum.SETTINGS);
+        if (stage.getOwner() == null) {
+            stage.initOwner(WindowUtil.INSTANCE.getStage(WindowEnum.MAIN));
         }
         stage.show();
     }
 
     @FXML
     protected void updateVersion() {
-        Release release = VersionListener.getLatestRelease();
-        if (release != null) {
-            downloadRelease(release, false, path -> {
+        if (VersionListener.INSTANCE.getCanUpdate()) {
+            SimpleDoubleProperty progress = new SimpleDoubleProperty();
+            Release release = VersionListener.INSTANCE.getLatestRelease();
+            if (release == null) return;
+
+            VersionListener.INSTANCE.downloadLatestRelease(false, progress, path -> {
                 if (path == null) {
-                    Platform.runLater(() -> WindowUtil.createAlert(String.format("新版本<%s>下载失败", release.getTagName()), "", rootPane.getScene().getWindow()).show());
+                    Platform.runLater(
+                            () -> WindowUtil.INSTANCE.createAlert(String.format("新版本<%s>下载失败", release.getTagName()),
+                                    "",
+                                    rootPane.getScene().getWindow()).show()
+                    );
                 } else {
-                    Platform.runLater(() -> WindowUtil.createAlert("新版本[" + release.getTagName() + "]下载完毕", "现在更新？", event -> execUpdate(path), event -> UPDATING.set(false), rootPane.getScene().getWindow()).show());
+                    Platform.runLater(
+                            () -> WindowUtil.INSTANCE.createAlert("新版本[" + release.getTagName() + "]下载完毕",
+                                    "现在更新？",
+                                    event -> VersionListener.INSTANCE.execUpdate(path),
+                                    event -> {},
+                                    rootPane.getScene().getWindow()).show()
+                    );
                 }
             });
         }
@@ -519,33 +455,29 @@ public class MainController implements Initializable {
     protected void saveTime() {
 //        检查挂机天
         ObservableList<Node> workDayChildren = workDay.getChildren();
-        String[] workDayFlagArr = Work.getWorkDayFlagArr();
-        for (int i = 0; i < workDayChildren.size(); i++) {
-            workDayFlagArr[i] = String.valueOf(((CheckBox) workDayChildren.get(i)).isSelected());
+        ArrayList<WorkDay> workDays = new ArrayList<>();
+        for (Node workDayChild : workDayChildren) {
+            if (workDayChild instanceof CheckBox checkBox) {
+                workDays.add(new WorkDay(checkBox.getUserData().toString(), checkBox.isSelected()));
+            }
         }
+        ConfigExUtil.INSTANCE.storeWorkDay(workDays);
 //        检查挂机段
         ObservableList<Node> workTimeChildren = workTime.getChildren();
-        String[] workTimeFlagArr = Work.getWorkTimeFlagArr();
-        String[] workTimeArr = Work.getWorkTimeArr();
-        for (int i = 0; i < workTimeChildren.size(); i++) {
-            HBox hBox = (HBox) workTimeChildren.get(i);
+        ArrayList<WorkTime> workTimes = new ArrayList<>();
+        for (Node workTimeChild : workTimeChildren) {
+            HBox hBox = (HBox) workTimeChild;
             ObservableList<Node> children = ((HBox) hBox.getChildren().get(1)).getChildren();
             Time startTime = (Time) children.get(0), endTime = (Time) children.get(2);
             CheckBox timeCheckBox = (CheckBox) hBox.getChildren().get(0);
-            if (startTime.timeProperty().get() != null && endTime.timeProperty().get() != null) {
-                workTimeArr[i] = String.join("-", startTime.getTime(), endTime.getTime());
-                workTimeFlagArr[i] = String.valueOf(timeCheckBox.isSelected());
-            } else {
-                workTimeArr[i] = "null";
-                startTime.setTime(null);
-                endTime.setTime(null);
-                workTimeFlagArr[i] = String.valueOf(false);
-                timeCheckBox.setSelected(false);
-            }
             startTime.refresh();
             endTime.refresh();
+            WorkTime time = new WorkTime(startTime.getTime(), endTime.getTime(), timeCheckBox.isSelected());
+            workTimes.add(time);
         }
-        Work.storeWorkDate();
+        ConfigExUtil.INSTANCE.storeWorkTime(workTimes);
+
+        initWorkDate();
         notificationManger.showSuccess("工作时间保存成功", 2);
     }
 
